--- a/admin/config.json
+++ b/admin/config.json
@@ -1,6 +1,6 @@
 {
-  "ownerNumber": ["6282347260729@s.whatsapp.net"],
-  "namabot":"MYBOT",
-  "namaowner":"AYAM-GORENG"
+  "ownerNumber": ["6288223674569@s.whatsapp.net"],
+  "namabot":"ChenBot",
+  "namaowner":"NainnOfc"
 }
 
